# stack-action

./: .gitignore  .releaserc.yaml  .restyled.yaml  README.md  action.yml  jest.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  example.yml  mergeabot.yml  release.yml
example/: example.cabal  package.yaml  stack-link.yaml  stack.yaml
example/src/: Foo.hs
generate-matrix/: action.yml
scripts/: main.py
src/: dirty-files.test.ts  dirty-files.ts  envsubst.test.ts  envsubst.ts  get-cache-keys.test.ts  get-cache-keys.ts  hash-project.ts  hie.ts  inputs.ts  main.ts  parse-stack-path.test.ts  parse-stack-path.ts  parse-stack-query.test.ts  parse-stack-query.ts  stack-cli.test.ts  stack-cli.ts  stack-yaml.test.ts  stack-yaml.ts  with-cache.test.ts  with-cache.ts
