[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
lxml = "^4.9.3"
markdown = "^3.5.1"
prettytable = "^3.9.0"

[tool.poetry.scripts]
main = "scripts.main:main"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
